[project]
name = "grounded-sam"
version = "0.1.0"
description = "A simple way to combine GroundingDINO and SAM using the transformers library"
authors = [
    {name = "Eduardo Pacheco", email = "pacheco.eduardo.silva@gmail.com"},
]
dependencies = [
    "opencv-python>=4.8.1.78",
    "Pillow>=10.3.0",
    "numpy>=1.24.4",
    "matplotlib>=3.7.5",
    "plotly>=5.20.0",
    "requests>=2.31.0",
    "transformers @ git+https://github.com/huggingface/transformers.git@main",
    "torch>=2.2.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
